fix: add align to social icons

--- a/style.scss
+++ b/style.scss
@@ -925,6 +925,7 @@ $main-color: #4CB649;
         max-width: 333px;
         display: flex;
         justify-content: space-between;
+        align-items: center;
 
         a {
             text-decoration: none;
